# camera-engine-rkaiq

./: .gitignore  CMakeLists.txt  RkAiqCamGroupManager.cpp  RkAiqCamGroupManager.h  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h
aiq_core/: RkAiqAnalyzeGroupManager.cpp  RkAiqAnalyzeGroupManager.h  RkAiqCamGroupHandleInt.h  RkAiqCore.cpp  RkAiqCore.h  RkAiqCoreV21.cpp  RkAiqCoreV21.h  RkAiqCoreV3x.cpp  RkAiqCoreV3x.h  RkAiqHandle.cpp  RkAiqHandle.h  RkAiqHandleInt.h  RkAiqHandleIntV21.h  RkAiqHandleIntV3x.h  RkAiqResourceTranslator.cpp  RkAiqResourceTranslatorV3x.cpp
aiq_core/algo_camgroup_handlers/: RkAiqCamGroupAbayer2dnrV2Handle.cpp  RkAiqCamGroupAbayertnrV2Handle.cpp  RkAiqCamGroupAblcHandle.cpp  RkAiqCamGroupAcnrV2Handle.cpp  RkAiqCamGroupAdebayerHandle.cpp  RkAiqCamGroupAdpccHandle.cpp  RkAiqCamGroupAeHandle.cpp  RkAiqCamGroupAgammaHandle.cpp  RkAiqCamGroupAgicHandle.cpp  RkAiqCamGroupAldchHandle.cpp  RkAiqCamGroupAlscHandle.cpp  RkAiqCamGroupAmergeHandle.cpp  RkAiqCamGroupAsharpV4Handle.cpp  RkAiqCamGroupAwbHandle.cpp  RkAiqCamGroupAynrV3Handle.cpp
aiq_core/algo_handlers/: RkAiqA3dlutHandle.cpp  RkAiqAbayer2dnrV2Handle.cpp  RkAiqAbayertnrV2Handle.cpp  RkAiqAblcHandle.cpp  RkAiqAcacHandle.cpp  RkAiqAccmHandle.cpp  RkAiqAcgcHandle.cpp  RkAiqAcnrHandle.cpp  RkAiqAcnrV1Handle.cpp  RkAiqAcnrV2Handle.cpp  RkAiqAcpHandle.cpp  RkAiqAcsmHandle.cpp  RkAiqAdebayerHandle.cpp  RkAiqAdegammaHandle.cpp  RkAiqAdhazHandle.cpp  RkAiqAdpccHandle.cpp  RkAiqAdrcHandle.cpp  RkAiqAeHandle.cpp  RkAiqAeisHandle.cpp  RkAiqAfHandle.cpp  RkAiqAfecHandle.cpp  RkAiqAgainHandle.cpp  RkAiqAgainV2Handle.cpp  RkAiqAgammaHandle.cpp  RkAiqAgicHandle.cpp  RkAiqAieHandle.cpp  RkAiqAldchHandle.cpp  RkAiqAlscHandle.cpp  RkAiqAmdHandle.cpp  RkAiqAmergeHandle.cpp  RkAiqAmfnrHandle.cpp  RkAiqAnrHandle.cpp  RkAiqAorbHandle.cpp  RkAiqAr2yHandle.cpp  RkAiqArawnrHandle.cpp  RkAiqArawnrV2Handle.cpp  RkAiqAsdHandle.cpp  RkAiqAsharpHandle.cpp  RkAiqAsharpV3Handle.cpp  RkAiqAsharpV4Handle.cpp  (+8 more)
algos/: CMakeLists.txt
algos/a3dlut/: CMakeLists.txt
algos/abayer2dnr2/: CMakeLists.txt  rk_aiq_abayer2dnr_algo_bayernr_v2.cpp  rk_aiq_abayer2dnr_algo_v2.h
algos/abayertnr2/: CMakeLists.txt  rk_aiq_abayertnr_algo_v2.h
algos/ablc/: CMakeLists.txt
algos/acac/: CMakeLists.txt  cac_adaptor.cpp  rk_aiq_algo_acac_itf.cpp
algos/accm/: CMakeLists.txt
algos/acgc/: CMakeLists.txt
algos/acnr/: CMakeLists.txt
algos/acnr2/: CMakeLists.txt  rk_aiq_acnr_algo_v2.h
algos/acp/: CMakeLists.txt
algos/adebayer/: CMakeLists.txt
algos/adegamma/: CMakeLists.txt
algos/adehaze/: CMakeLists.txt  rk_aiq_adehaze_algo.cpp  rk_aiq_adehaze_algo.h  rk_aiq_algo_adhaz_itf.cpp  rk_aiq_types_adehaze_algo_prvt.h
algos/adpcc/: CMakeLists.txt
algos/adrc/: CMakeLists.txt  rk_aiq_adrc_algo.cpp
algos/ae/: CMakeLists.txt
algos/aeis/: CMakeLists.txt
algos/af/: CMakeLists.txt
algos/afec/: CMakeLists.txt
algos/again/: CMakeLists.txt
algos/again2/: CMakeLists.txt  rk_aiq_again_algo_v2.cpp
algos/agamma/: CMakeLists.txt
algos/agic/: CMakeLists.txt
algos/aie/: CMakeLists.txt
algos/aldch/: CMakeLists.txt
algos/alsc/: CMakeLists.txt  rk_aiq_types_alsc_algo_prvt.h
algos/amerge/: CMakeLists.txt  rk_aiq_amerge_algo.cpp
algos/amfnr/: CMakeLists.txt
algos/anr/: CMakeLists.txt
algos/aorb/: CMakeLists.txt
algos/ar2y/: CMakeLists.txt
algos/arawnr/: CMakeLists.txt
algos/arawnr2/: CMakeLists.txt
algos/asd/: CMakeLists.txt
algos/asharp/: CMakeLists.txt
algos/asharp3/: CMakeLists.txt
algos/asharp4/: CMakeLists.txt  rk_aiq_asharp_algo_sharp_v4.cpp  rk_aiq_asharp_algo_v4.h
algos/atmo/: CMakeLists.txt
algos/auvnr/: CMakeLists.txt
algos/awb/: CMakeLists.txt
algos/awdr/: CMakeLists.txt
algos/aynr/: CMakeLists.txt
algos/aynr2/: CMakeLists.txt
algos/aynr3/: CMakeLists.txt  rk_aiq_aynr_algo_v3.h  rk_aiq_aynr_algo_ynr_v3.cpp
algos_camgroup/: rk_aiq_algo_camgroup_types.h
algos_camgroup/abayernr/: rk_aiq_algo_camgroup_abayernr_itf.cpp  rk_aiq_uapi_camgroup_abayer2dnr_int_v2.cpp
algos_camgroup/acnr/: rk_aiq_algo_camgroup_acnr_itf.cpp  rk_aiq_uapi_camgroup_acnr_int_v2.cpp
algos_camgroup/asharp/: rk_aiq_algo_camgroup_asharp_itf.cpp  rk_aiq_uapi_camgroup_asharp_int_v4.cpp
algos_camgroup/atnr/: rk_aiq_algo_camgroup_atnr_itf.cpp  rk_aiq_uapi_camgroup_atnr_int_v2.cpp
algos_camgroup/aynr/: rk_aiq_algo_camgroup_aynr_itf.cpp  rk_aiq_uapi_camgroup_aynr_int_v3.cpp
algos_camgroup/misc/: rk_aiq_algo_camgroup_misc_itf.h
cmake/: BuildOptions.cmake  CompileOptions.cmake
common/: rk_aiq_pool.h  rk_aiq_types_priv.h
hwi/: IspParamsSplitter.cpp  LensHw.cpp  SensorHw.cpp  SensorHw.h
hwi/fakecamera/: FakeCamHwIsp20.cpp  FakeSensorHw.cpp
hwi/isp20/: CamHwIsp20.cpp  CamHwIsp20.h  Isp20Params.cpp  PdafStreamProcUnit.cpp  SPStreamProcUnit.h
hwi/isp21/: CamHwIsp21.cpp  Isp21Params.cpp
hwi/isp3x/: CamHwIsp3x.cpp  Isp3xParams.cpp
include/common/: rk-camera-module.h  rk_aiq_types.h  rkisp2-config.h
include/iq_parser_v2/: RkAiqUapitypes.h  adehaze_head.h  adrc_uapi_head.h  aec_uapi_head.h  af_head.h  cac_head.h
include/uAPI/: rk_aiq_user_api_sysctl.h
include/uAPI2/: rk_aiq_user_api2_aie.h  rk_aiq_user_api2_awb.h  rk_aiq_user_api2_custom_ae.h  rk_aiq_user_api2_imgproc.h  rk_aiq_user_api2_sysctl.h  rk_aiq_user_api2_wrapper.h
iq_parser_v2/: CMakeLists.txt  RkAiqCalibDbV2.cpp
iqfiles/isp3x/: imx327_CMK-OT1607-FV1_M12-40IRC-4MP-F16.json  imx415_CMK-OT2022-PX1_IR0147-50IRC-8M-F20.json  imx464_CMK-OT1980-PX1_SHG102.json  imx464_default_default.json  os04a10_DH3588AVS6_default.json  os04a10hk_CMK-OT1607-FV1_M12-40IRC-4MP-F16.json  ov13855_CMK-OT2016-FV1_default.json  (+2 more)
rkaiq_3A_server/: CMakeLists.txt  rkaiq_3A_server.cpp
uAPI/: rk_aiq_user_api_imgproc.cpp  rk_aiq_user_api_sysctl.cpp
uAPI2/: rk_aiq_user_api2_abayertnr_v2.cpp  rk_aiq_user_api2_acp.cpp  rk_aiq_user_api2_acsm.cpp  rk_aiq_user_api2_aie.cpp  rk_aiq_user_api2_awb.cpp  rk_aiq_user_api2_custom_ae.cpp  rk_aiq_user_api2_custom_awb.cpp  rk_aiq_user_api2_helper.cpp  rk_aiq_user_api2_imgproc.cpp  rk_aiq_user_api2_sysctl.cpp  rk_aiq_user_api2_wrapper.cpp
(+32 files in other folders)
