if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING
        "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel."
        FORCE)
endif()

cmake_minimum_required(VERSION 2.8)

# surpress CXX_VISIBILITY_PRESET warning
cmake_policy(SET CMP0063 NEW)

include_directories(
    ../xcore
    ../xcore/base
    ./
    )

if(WIN32)
    set(PREFIX )
    set(SUFFIX lib)
else()
    set(PREFIX ${LIBRARY_OUTPUT_PATH}/lib)
    set(SUFFIX a)
endif()

add_subdirectory(ae)
add_subdirectory(awb)
add_subdirectory(af)
add_subdirectory(aie)
add_subdirectory(amerge)
add_subdirectory(atmo)
add_subdirectory(adrc)
add_subdirectory(anr)
add_subdirectory(asharp)
add_subdirectory(asd)
add_subdirectory(acp)
add_subdirectory(adehaze)
add_subdirectory(a3dlut)
add_subdirectory(ablc)
add_subdirectory(accm)
add_subdirectory(acgc)
add_subdirectory(adebayer)
add_subdirectory(adpcc)
add_subdirectory(afec)
add_subdirectory(agamma)
add_subdirectory(adegamma)
add_subdirectory(agic)
add_subdirectory(aldch)
add_subdirectory(alsc)
add_subdirectory(aorb)
add_subdirectory(ar2y)
add_subdirectory(awdr)
add_subdirectory(asharp3)
add_subdirectory(aynr2)
add_subdirectory(acnr)
add_subdirectory(arawnr2)
add_subdirectory(aeis)
add_subdirectory(amd)
add_subdirectory(arawnr)
add_subdirectory(aynr)
add_subdirectory(auvnr)
add_subdirectory(amfnr)
add_subdirectory(again)
add_subdirectory(again2)
add_subdirectory(aynr3)
add_subdirectory(acnr2)
add_subdirectory(asharp4)
add_subdirectory(abayer2dnr2)
add_subdirectory(abayertnr2)
add_subdirectory(acac)
